# electrs

./: .ackrc  .cirrus.yml  .dockerignore  .editorconfig  .envrc  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  LICENSE  README.md  README.rst  RELEASE-NOTES.md  TODO.md  TODO.rst  TODO.txt  build.rs  config_spec.toml  electrs.conf  electrs.toml.example  flake.nix  index.sh  query.sh  rocksdb-overlay.nix  rust-toolchain.toml  server.sh  sync.sh  testnet-bench.sh
.cargo/: audit.toml  config.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  build_problem.md  config_problem.md  feature_request.md
.github/workflows/: docker.yml  electrs.yml  rust.yml
.hooks/: install.sh  pre-commit
CONF/: config.toml
benches/: benches.rs
contrib/: addr.py  check-api-stablity.sh  client.py  daemon.py  electrs.service  get_balance.py  get_tip.py  get_tx.py  health_check.py  history.py  history.sh  local-electrum.bash  mempool.py  popular-scripts.txt  script_hash.py  script_hash.sh  testChanges.sh  tx_fee.py  venv_wrapper.sh  xpub.py
doc/: binaries.md  config.md  config_example.toml  cookie_deprecation.md  docker.md  install.md  monitoring.md  quickstart.md  schema.md  upgrading.md  usage.md
doc/usage/: README.md  binary_build.md  config.md  docker_build.md  manual_build.md  monitoring.md  upgrading.md
docker/bitcoin/: conf.toml  docker-compose.yml
docker/testnet/: conf.toml  docker-compose.yml
electrs_index/: Cargo.toml  build.rs  config_spec.toml
electrs_index/src/: config.rs  daemon.rs  db.rs  index.rs  lib.rs  map.rs  metrics.rs  types.rs  undo.rs  waiter.rs
electrs_macros/: Cargo.toml
electrs_macros/src/: lib.rs
electrs_query/: Cargo.toml
electrs_query/src/: main.rs
electrs_rpc/: Cargo.toml
electrs_rpc/src/: main.rs  mempool.rs  rpc.rs  util.rs
examples/: bench_index.rs  bench_parse.rs  compact.rs  index.rs  listener.rs  load.rs  tx_collisions.rs  txid_collisions.rs
infrastructure/kube/keep-test/: electrs-configmap.yaml  electrs-service.yaml  electrs-statefulset.yaml
infrastructure/kube/templates/electrs/initcontainer/provision-electrs/: Dockerfile  electrs-config.toml  package-lock.json  package.json  provision-electrs.js
instrumented_macro/: Cargo.toml
instrumented_macro/src/: lib.rs
internal/: README.md  config_specification.toml
scripts/: run.sh
src/: app.rs  bulk.rs  cache.rs  chain.rs  config.rs  daemon.rs  db.rs  db_heed.rs  db_lmdb_rkv.rs  db_redb.rs  db_rocksdb.rs  db_sled.rs  db_store.rs  electrum.rs  errors.rs  fake.rs  index.rs  iroh_listener.rs  lib.rs  main.rs  map.rs  mempool.rs  merkle.rs  metrics.rs  new_index.rs  notify.rs  otlp_trace.rs  p2p.rs  parse.rs  query.rs  rest.rs  rndcache.rs  rpc.rs  server.rs  signal.rs  signals.rs  sp.rs  status.rs  store.rs  subscriptions.rs  (+8 more)
src/connection/: mod.rs  p2p.rs  rpc_zmq.rs
src/db/: fjall.rs  lmdb.rs  mod.rs  redb.rs  rocksdb.rs  sled.rs
src/electrum/: client.rs  discovery.rs  mod.rs  server.rs
src/electrum/discovery/: default_servers.rs
src/elements/: asset.rs  assetid.rs  mod.rs  peg.rs  registry.rs
src/new_index/: db.rs  fetch.rs  mempool.rs  mod.rs  precache.rs  query.rs  schema.rs  zmq.rs
src/tests/fixtures/: incomplete_block.hex
src/util/: address.rs  bincode.rs  block.rs  electrum_merkle.rs  elements.rs  fees.rs  merkle.rs  mod.rs  script.rs  transaction.rs
src/utils/: address.rs  elements.rs  mod.rs
tests/: common.rs  electrum.rs  rest.rs  run.sh
tools/: addr.py  client.py  mempool.py  xpub.py  zmq-client.py
