[package]
name = "electrs"
version = "0.11.0"
authors = ["Roman Zeyde <me@romanzey.de>"]
description = "An efficient re-implementation of Electrum Server in Rust"
license = "MIT"
homepage = "https://github.com/romanz/electrs"
repository = "https://github.com/romanz/electrs"
keywords = ["bitcoin", "electrum", "server", "index", "database"]
documentation = "https://docs.rs/electrs/"
readme = "README.md"
edition = "2021"
rust-version = "1.85.0"
build = "build.rs"

[features]
default = ["metrics"]
metrics = ["prometheus", "tiny_http"]
metrics_process = ["prometheus/process"]

[package.metadata.configure_me]
spec = "internal/config_specification.toml"

[dependencies]
anyhow = "1.0"
bindex = { git = "https://github.com/romanz/bindex-rs", rev = "b20d0ff55caa7e801649112d8906dabfa4aab771" }
bitcoincore-rpc = { version = "0.19.0" }
configure_me = "0.4"
crossbeam-channel = "0.5"
dirs-next = "2.0"
env_logger = "0.10"
log = "0.4"
parking_lot = "0.12"
prometheus = { version = "0.14", optional = true }
rayon = "1.11"
serde = "1.0.184"
serde_derive = "1.0.184"
serde_json = "1.0"
tiny_http = { version = "0.12", optional = true }

[target.'cfg(windows)'.dependencies]
ctrlc = "=3.5.1"

[target.'cfg(not(windows))'.dependencies]
signal-hook = "0.3"

[build-dependencies]
configure_me_codegen = { version = "0.4.8", default-features = false }

[dev-dependencies]
bitcoin-test-data = "0.2.0"
hex_lit = "0.1.1"
tempfile = "3.23"

[lints.clippy]
uninlined_format_args = "allow"  # TODO: https://github.com/romanz/electrs/issues/1199
