[package]
name = "electrs_index"
version = "0.1.0"
authors = ["Roman Zeyde <me@romanzey.de>"]
edition = "2018"

[features]
default = ["rocksdb/snappy", "rocksdb/lz4", "rocksdb/zstd", "rocksdb/zlib", "rocksdb/bzip2"]

[dependencies]
anyhow = "1.0"
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "93df7cbd3e02961835d250cf606e65b6826b78fe", features = ["use-serde"] }
bitcoincore-rpc = { git = "https://github.com/romanz/rust-bitcoincore-rpc", rev = "e6848320ecf8be76a2a980919acc58e64a8b66eb" }
chrono = "0.4"
clap = "2.33"
env_logger = "0.7"
hyper = "0.10"
log = "0.4"
prometheus = { version = "0.10", features = ["process"] }
# keeping older protobuf due to https://github.com/stepancheg/rust-protobuf/blob/master/CHANGELOG.md#2150---2020-06-21 (for Rust 1.41.1 compatibility)
protobuf = "=2.14.0"
# cannot update to latest rocksdb due to https://github.com/rust-rocksdb/rust-rocksdb/commit/3e223d15919e4e31e50af0dc3d52439a4635852c (for Rust 1.41.1 compatibility)
rocksdb = { git = "https://github.com/romanz/rust-rocksdb", rev = "9f639dd7cd378569a96a5824b09ea03104cadfff", default-features = false }
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
