[package]
name = "electrs_rpc"
version = "0.9.0"
authors = ["Roman Zeyde <me@romanzey.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-signals = "0.3"
async-std = { version = "1.7" }
futures = "0.3"
libc = "0.2"
log = "0.4"
rayon = "1.3"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.10"

electrs_index = { path = "../electrs_index" }
